# ipc-eval-system

./: .gitignore  README.md  debug-dataset-list-500.md  debug-gif-frame-failure.md  debug-gif-key-migration.md  debug-task-25-interrupt.md  debug-task-25-timeout-trace.md  debug-user-login-failure.md  package-lock.json  package.json  tsconfig.base.json
backend/: .env.example  pyproject.toml  rename_report_night_view.json  rename_report_pet_execute.json  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: __init__.py  annotations.py  auth.py  datasets.py  evaluation_data.py  health.py  prompt_templates.py  scoring_templates.py  tasks.py  users.py  vector_retrieval.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  dataset.py  prompt_template.py  scoring_template.py  task.py  user.py
backend/app/schemas/: __init__.py  dataset.py  prompt_template.py  task.py  (+3 more)
backend/outputs/: vector_ingestion_dataset_7_en.backup_20260616_143727.json  vector_ingestion_dataset_7_en.remove_170_person_related.json  vector_ingestion_dataset_7_en.remove_170_person_related.removed_items.json
backend/scripts/: backfill_task_usernames.py  create_users_table.sql  delete_tos_raw_objects.py  fix_failed_tos_renames.py  generate_seedream_images.py  init_db.py  prepare_vector_ingestion_data.py  rename_night_view_videos.py  upsert_vector_ingestion_data.py
backend/tests/: test_auth_login.py  test_prepare_vector_ingestion_data.py  test_scoring_metrics.py  test_upsert_vector_ingestion_data.py  test_users_api.py  test_vector_retrieval.py
(+105 files in other folders)
